force-app/main/default/objects/Research_Call__c/Research_Call__c.object-meta.xml
<CustomObject>
    <label>Research Call</label>
    <nameField>
        <displayFormat>RC-{0000000}</displayFormat>
        <label>Call ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Research Calls</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>