force-app/main/default/objects/Research_Call__c/fields/ACDF_Stage__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Stage__c</fullName>
    <formula>Text(Opportunity__r.StageName)</formula>
    <label>ACDF Stage</label>
    <type>Text</type>
</CustomField>