force-app/main/default/objects/Research_Call__c/fields/Call_Complete__c.field-meta.xml
<CustomField>
    <fullName>Call_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Complete</label>
    <type>Checkbox</type>
</CustomField>