force-app/main/default/objects/Research_Call__c/fields/Call_Countdown__c.field-meta.xml
<CustomField>
    <fullName>Call_Countdown__c</fullName>
    <formula>Due_Date__c - Today_s_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Countdown</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>