force-app/main/default/objects/Research_Call__c/fields/Call_Counter__c.field-meta.xml
<CustomField>
    <fullName>Call_Counter__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>