force-app/main/default/objects/Research_Call__c/fields/Call_Name__c.field-meta.xml
<CustomField>
    <fullName>Call_Name__c</fullName>
    <label>Call Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>