force-app/main/default/objects/Research_Call__c/fields/Call_Recording_Response__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording_Response__c</fullName>
    <label>Call Recording Response</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact ended call because of recording</fullName>
            </value>
            <value>
                <fullName>Direct verbal negative reaction to recording but did not end call</fullName>
            </value>
            <value>
                <fullName>Sense that candidate was negatively influenced by recording</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>