force-app/main/default/objects/Research_Call__c/fields/Call_Result__c.field-meta.xml
<CustomField>
    <fullName>Call_Result__c</fullName>
    <label>Call Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Left VM (Office)</fullName>
            </value>
            <value>
                <fullName>Left VM (Cell)</fullName>
            </value>
            <value>
                <fullName>Left message w/assistant</fullName>
            </value>
            <value>
                <fullName>TT : Hung up/Try again</fullName>
            </value>
            <value>
                <fullName>TT : Explained prog. Think will complete.</fullName>
            </value>
            <value>
                <fullName>TT : Said would complete</fullName>
            </value>
            <value>
                <fullName>TT : Busy, sent EM for follow up call.</fullName>
            </value>
            <value>
                <fullName>TT : Completed over phone</fullName>
            </value>
            <value>
                <fullName>TT : Not interested</fullName>
            </value>
            <value>
                <fullName>TT : Busy ATM, CB</fullName>
            </value>
            <value>
                <fullName>NA : Explain</fullName>
            </value>
            <value>
                <fullName>Completed Form</fullName>
            </value>
            <value>
                <fullName>Data Issue</fullName>
            </value>
            <value>
                <fullName>Pre-recorded voicemail.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>