force-app/main/default/objects/Research_Call__c/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Market</fullName>
            </value>
            <value>
                <fullName>2nd Call</fullName>
            </value>
            <value>
                <fullName>3rd Call</fullName>
            </value>
            <value>
                <fullName>4th Call</fullName>
            </value>
            <value>
                <fullName>5th Call</fullName>
            </value>
            <value>
                <fullName>Call received</fullName>
            </value>
            <value>
                <fullName>Call back</fullName>
            </value>
            <value>
                <fullName>Follow Up Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>