force-app/main/default/objects/Research_Call__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <label>Candidate</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Research Calls</relationshipLabel>
    <relationshipName>Research_Calls</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>