force-app/main/default/objects/Research_Call__c/fields/Central__c.field-meta.xml
<CustomField>
    <fullName>Central__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Central</label>
    <type>Checkbox</type>
</CustomField>