force-app/main/default/objects/Research_Call__c/fields/Data_Issue__c.field-meta.xml
<CustomField>
    <fullName>Data_Issue__c</fullName>
    <formula>Opportunity__r.Data_Issue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Issue</label>
    <type>Checkbox</type>
</CustomField>