force-app/main/default/objects/Research_Call__c/fields/Days_since_last_contact__c.field-meta.xml
<CustomField>
    <fullName>Days_since_last_contact__c</fullName>
    <formula>Opportunity__r.days_since_last_contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since last contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>