force-app/main/default/objects/Research_Call__c/fields/Due_Date_was_Changed__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_was_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Due Date was Changed</label>
    <type>Checkbox</type>
</CustomField>