force-app/main/default/objects/Research_Call__c/fields/Due_DateX__c.field-meta.xml
<CustomField>
    <fullName>Due_DateX__c</fullName>
    <description>This field shows the first due date from when this call was created.</description>
    <inlineHelpText>This field shows the first due date from when this call was created.</inlineHelpText>
    <label>*Due Date*</label>
    <type>Date</type>
</CustomField>