force-app/main/default/objects/Research_Call__c/fields/Importance__c.field-meta.xml
<CustomField>
    <fullName>Importance__c</fullName>
    <label>Importance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>