force-app/main/default/objects/Research_Call__c/fields/ImportanceX__c.field-meta.xml
<CustomField>
    <fullName>ImportanceX__c</fullName>
    <description>Displays the current  Importance value from the Opportunity record.</description>
    <formula>Opportunity__r.Importance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the current  Importance value from the Opportunity record.</inlineHelpText>
    <label>Importance*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>