force-app/main/default/objects/Research_Call__c/fields/Last_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Date__c</fullName>
    <formula>Opportunity__r.Last_Call_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Call Date</label>
    <type>Date</type>
</CustomField>