force-app/main/default/objects/Research_Call__c/fields/Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street__c</fullName>
    <formula>Opportunity__r.Mailing_Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Street</label>
    <type>Text</type>
</CustomField>