force-app/main/default/objects/Research_Call__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Research Calls</relationshipLabel>
    <relationshipName>Research_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>