force-app/main/default/objects/Research_Call__c/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <formula>Candidate__r.Nickname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nickname</label>
    <type>Text</type>
</CustomField>