force-app/main/default/objects/Research_Call__c/fields/Open_Calls_Counter__c.field-meta.xml
<CustomField>
    <fullName>Open_Calls_Counter__c</fullName>
    <formula>IF( ISBLANK(TEXT( Call_Result__c )), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Calls Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>