force-app/main/default/objects/Research_Call__c/fields/Overdue_in__c.field-meta.xml
<CustomField>
    <fullName>Overdue_in__c</fullName>
    <formula>Due_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue in</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>