force-app/main/default/objects/Research_Call__c/fields/Research_Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Research_Client_Type__c</fullName>
    <formula>TEXT( Candidate__r.Research_Client_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Research Client Type</label>
    <type>Text</type>
</CustomField>