force-app/main/default/objects/Research_Call__c/fields/Research_Company__c.field-meta.xml
<CustomField>
    <fullName>Research_Company__c</fullName>
    <formula>Candidate__r.Research_Company__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Research Company</label>
    <type>Text</type>
</CustomField>