force-app/main/default/objects/Research_Call__c/fields/Research_Professional_ID__c.field-meta.xml
<CustomField>
    <fullName>Research_Professional_ID__c</fullName>
    <externalId>true</externalId>
    <label>Research_Professional_ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>