force-app/main/default/objects/Research_Call__c/fields/Research_Rep__c.field-meta.xml
<CustomField>
    <fullName>Research_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Research_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>