force-app/main/default/objects/Research_Call__c/fields/Research_Status__c.field-meta.xml
<CustomField>
    <fullName>Research_Status__c</fullName>
    <formula>TEXT( Candidate__r.Research_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Research Status</label>
    <type>Text</type>
</CustomField>