force-app/main/default/objects/Research_Call__c/listViews/tes2.listView-meta.xml
<ListView>
    <fullName>tes2</fullName>
    <columns>Call_Counter__c</columns>
    <columns>Call_Result__c</columns>
    <columns>Research_Rep__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Research_Rep__c</field>
        <operation>equals</operation>
    </filters>
    <label>tes2</label>
</ListView>